# MCMC

./: .gitignore  CMakeLists.txt  README.MD  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_all.sh  setup.py
.github/workflows/: build-mcmc.yml  ci.yml  lint.yml
mcmc_tools/analysis/: __init__.py  compute_stats.py  export_results.py  generate_plots.py
mcmc_tools/analysis_utils/: init.py  io.py  plots.py  stat_runner.py  stats.py  visualize_lattices.py
mcmc_tools/db/: __init__.py  connection.py  etl.py  models.py
src/: main.cpp
src/bindings/: clock_model_bindings.cpp  ising_model_bindings.cpp  xy_model_bindings.cpp
src/include/: clock_model.hpp  ising_model.hpp  xy_model.hpp
src/models/: clock_model.cpp  ising_model.cpp  xy_model.cpp
streamlit_app/: app.py  app2.py  binary_provider.py  infos.py
streamlit_app/.streamlit/: config.toml
streamlit_app/analysis/: analyze_energy_mag.py  statistical_analysis.py  visualize_lattices.py
tests/: test_clock_model.py  test_ising_model.py  test_xy_model.py
