[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmc-tools"
version = "0.1.0"
description = "Python tooling for MCMC project (DB, analysis, CLI)"
requires-python = ">=3.9"
dependencies = [
  "sqlalchemy>=2.0",
  "python-dotenv>=1.0",
  "pandas>=2.0",
  "numpy>=1.23",
  "plotly>=5.0",
  "streamlit>=1.31",
  'psycopg2-binary>=2.9; platform_system != "Windows"'
]

[project.optional-dependencies]
# Nur lokal verwenden für die C++-Bindings:
native = ["pybind11>=2.12", "cmake>=3.18"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcmc_tools*"]
